preparing next release

--- a/distribution/src/main/assembly/changelog.txt
+++ b/distribution/src/main/assembly/changelog.txt
@@ -1,6 +1,10 @@
 JBoss Seam Changelog
 ====================
 
+Release Notes - Seam 2 - Version 2.3.3.ayg
+
+    * [JBSEAM-4842] - Support for Enums in EL (disabled by default, can be enabled via initial parameter org.jboss.seam.deployment.EnumDeploymentHandler)
+
 Release Notes - Seam 2 - Version 2.3.2.ayg
 
 ** Bug
