--- a/distribution/src/main/assembly/changelog.txt
+++ b/distribution/src/main/assembly/changelog.txt
@@ -26,6 +26,7 @@ Release Notase - Seam 2 - Version 2.3.5-SNAPSHOT
 	* [JBSEAM-5078] Unsynchronized access to conversation entries map
 	* [JBSEAM-4832] Exception in the filter chain javax.servlet.ServletException: java.util.ConcurrentModificationException
 	* [JBSEAM-3464] better message for HibernatePersistenceProvider.checkVersion() exception
+	* [JBSEAM-4200] hot deploy re-reads the class files, not just timestamps, on every request
 	* [ ] Recover and improved Seam Debug page
 	* [ ] Only enable Seam Debug if facelets and JSF are in development mode
 	* [ ] FileDocumentData allow store documents on files instead of memory.
