--- a/distribution/src/main/assembly/changelog.txt
+++ b/distribution/src/main/assembly/changelog.txt
@@ -3,7 +3,7 @@ JBoss Seam Changelog
 
 Release Notes - Seam 2 - Version 2.3.6-SNAPSHOT
 
-	* 
+	* [ ] Really ensure not entering in a redirection loop on error/debug/login pages
 
 
 Release Notes - Seam 2 - Version 2.3.5.ayg
