--- a/distribution/src/main/assembly/changelog.txt
+++ b/distribution/src/main/assembly/changelog.txt
@@ -3,8 +3,9 @@ JBoss Seam Changelog
 
 Release Notes - Seam 2 - Version 2.3.6-SNAPSHOT
 
-	* [ ] Really ensure not entering in a redirection loop on error/debug/login pages
 	* [JBSEAM-4678] Stop the PhaseListener doing work on non-seam applications
+	* [ ] Really ensure not entering in a redirection loop on error/debug/login pages
+	* [ ] RendererRequest with utf-8 character encoding
 
 
 Release Notes - Seam 2 - Version 2.3.5.ayg
