--- a/distribution/src/main/assembly/changelog.txt
+++ b/distribution/src/main/assembly/changelog.txt
@@ -4,6 +4,7 @@ JBoss Seam Changelog
 Release Notes - Seam 2 - Version 2.3.6-SNAPSHOT
 
 	* [JBSEAM-4678] Stop the PhaseListener doing work on non-seam applications
+	* [JBSEAM-2703] Avoid exceptions for invalid system request parameters
 	* [ ] Really ensure not entering in a redirection loop on error/debug/login pages
 	* [ ] RendererRequest with utf-8 character encoding
 
