--- a/distribution/src/main/assembly/changelog.txt
+++ b/distribution/src/main/assembly/changelog.txt
@@ -3,7 +3,8 @@ JBoss Seam Changelog
 
 Release Notes - Seam 2 - Version 2.3.7-SNAPSHOT
 
-	* [ ] 
+	* [ ] Only depends on EHCache 2 (removes dependency with EHCache 1)
+	* [ ] Update jboss-cache to 1.4.1.SP14
 
 Release Notes - Seam 2 - Version 2.3.6.ayg
 
