--- a/distribution/src/main/assembly/changelog.txt
+++ b/distribution/src/main/assembly/changelog.txt
@@ -2,9 +2,13 @@ JBoss Seam Changelog
 ====================
 
 Release Notes - Seam 2 - Version 2.3.10-SNAPSHOT
+
 	* [ ] Includes full Richfaces distribution (main jar)
+	* [ ] Upgrade jexcelapi to 2.6.12
+
 
 Release Notes - Seam 2 - Version 2.3.9.ayg
+
 	* [ ] Preliminary (incomplete) support for JEE7
 	* [ ] Compiler set to java 7
 	* [ ] Package richfaces and related jars (cssparser, sac, etc)
@@ -15,6 +19,7 @@ Release Notes - Seam 2 - Version 2.3.8.ayg
 
 	* [ ] Only depends on EHCache 2 (removes dependency with EHCache 1)
 	* [ ] Update jboss-cache to 1.4.1.SP14
+	
 	
 Release Notes - Seam 2 - Version 2.3.7.ayg (not released)
 
