--- a/distribution/src/main/assembly/changelog.txt
+++ b/distribution/src/main/assembly/changelog.txt
@@ -6,7 +6,7 @@ Release Notes - Seam 2 - Version 2.3.10-SNAPSHOT
 	* [ ] Includes full Richfaces distribution (main jar)
 	* [ ] Upgrade JExcelapi to 2.6.12
 	* [ ] Upgrade Primefaces to 6.1
-	* [ ] Parametrize logging output (Fix CVE-2014-0248)
+	* [ ] Parametrize logging output (Fixes CVE-2014-0248)
 
 
 Release Notes - Seam 2 - Version 2.3.9.ayg
@@ -451,7 +451,7 @@ Release Notes - Seam2 - Version 2.3.0.ALPHA
    * [ JBSEAM-4821 ] Typos in documentation             
    * [ JBSEAM-4833 ] Erroneous integer divisions in Image.scaleToFit()          
    * [ JBSEAM-4836 ] High CPU usage because of concurrent use of WeakHashmap            
-   * [ JBSEAM-4844 ] Seam 2 does not properly block access to EL expressions            
+   * [ JBSEAM-4844 ] Seam 2 does not properly block access to EL expressions (Fixes CVE-2011-2196)         
 
 ** Task
    * [ JBSEAM-2006 ] Improve handling of dependencies in examples           
@@ -472,7 +472,7 @@ Release Notes - Seam 2 - Version 2.2.2.Final
     * [JBSEAM-4774] - Usage of propagation="nested" with <s:link> doesn't create nested conversation
     * [JBSEAM-4775] - Session invalidated on every request if anemic sessions are used
     * [JBSEAM-4780] - IllegalArgumentException: No enum const PropagationType.xxxx
-    * [JBSEAM-4804] - JBoss Seam2 privilege escalation caused by EL interpolation in FacesMessages
+    * [JBSEAM-4804] - JBoss Seam2 privilege escalation caused by EL interpolation in FacesMessages (Fixes CVE-2011-1484)
     
     
 Release Notes - Seam - Version 2.2.1.Final 
