--- a/distribution/src/main/assembly/changelog.txt
+++ b/distribution/src/main/assembly/changelog.txt
@@ -3,6 +3,7 @@ JBoss Seam Changelog
 
 Release Notes - Seam 2 - Version 2.3.11-SNAPSHOT
 
+	* [ ] Fix support for hibernate search 5
 
 Release Notes - Seam 2 - Version 2.3.10.ayg
 
