--- a/distribution/src/main/assembly/changelog.txt
+++ b/distribution/src/main/assembly/changelog.txt
@@ -5,6 +5,7 @@ Release Notes - Seam 2 - Version 2.3.11-SNAPSHOT
 
 	* [ ] Fix support for hibernate search 5
 	* [ ] Removes portlet compile dependency
+	* [ ] Upgrade commons-logging to 1.2
 
 Release Notes - Seam 2 - Version 2.3.10.ayg
 
