--- a/distribution/src/main/assembly/changelog.txt
+++ b/distribution/src/main/assembly/changelog.txt
@@ -6,6 +6,7 @@ Release Notes - Seam 2 - Version 2.3.11-SNAPSHOT
 	* [ ] Fix support for hibernate search 5
 	* [ ] Removes portlet compile dependency
 	* [ ] Upgrade commons-logging to 1.2
+	* [ ] As per RF-13865 - Revert the rename of a4jSkin to richSkin, changing it back to a4jSkin
 
 Release Notes - Seam 2 - Version 2.3.10.ayg
 
